# api/handlers/models/book.go
@@ -1,8 +1,9 @@
 package models
 
 type Book struct {
-	Name     string `json:"name"`
-	AuthorId string `json:"authorId"`
+	Name     string   `json:"name"`
+	AuthorId string   `json:"authorId"`
+	Category []string `json:"categories"`
 }
 
 type BookResp struct {
@@ -15,8 +16,9 @@ type BookResp struct {
 }
 
 type UpdateBook struct {
-	Name     string `json:"name"`
-	AuthorId string `json:"authorId"`
+	Name     string   `json:"name"`
+	AuthorId string   `json:"authorId"`
+	Category []string `json:"categories"`
 }
 
 type ListBooks struct {
